--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mocha-steps": "^1.1.0",
     "mongoose": "^5.0.8",
     "statuses": "^1.4.0",
+    "tokenizr": "^1.3.0",
     "yargs": "^11.0.0"
   },
   "devDependencies": {
