--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "helmet": "^3.12.0",
     "mocha-steps": "^1.1.0",
     "mongoose": "^5.0.8",
+    "slug": "^0.9.1",
     "statuses": "^1.4.0",
     "tokenizr": "^1.3.0",
     "yargs": "^11.0.0"
