--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.0.2",
+    "mockgoose": "^7.3.5",
     "nyc": "^11.4.1",
     "supertest": "git+https://github.com/visionmedia/supertest.git"
   }
