--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "chalk": "^2.3.2",
-    "compression": "^1.7.2",
-    "coveralls": "^3.0.0",
+    "compression": "^1.7.2",    
     "cross-env": "^5.1.3",
     "es6-error": "^4.1.1",
     "express": "^4.16.2",
@@ -39,9 +38,11 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "js-yaml": "^3.11.0",
     "mocha": "^5.0.2",
     "mockgoose": "^7.3.5",
     "nyc": "^11.4.1",
+    "coveralls": "^3.0.0",
     "supertest": "git+https://github.com/visionmedia/supertest.git"
   }
 }
