--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cfonts": "^1.1.3",
     "chalk": "^2.3.2",
-    "compression": "^1.7.2",    
+    "compression": "^1.7.2",
     "cross-env": "^5.1.3",
     "es6-error": "^4.1.1",
     "express": "^4.16.2",
     "express-async-errors": "^2.1.2",
-    "figlet": "^1.2.0",
     "formidable": "^1.1.1",
     "fs-extra": "^5.0.0",
     "helmet": "^3.12.0",
