--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "es6-error": "^4.1.1",
     "express": "^4.16.2",
     "express-async-errors": "^2.1.2",
+    "filesize": "^3.6.1",
     "formidable": "^1.1.1",
     "fs-extra": "^5.0.0",
     "helmet": "^3.12.0",
     "mocha-steps": "^1.1.0",
+    "moment": "^2.21.0",
     "mongoose": "^5.0.8",
+    "pug": "^2.0.3",
     "slug": "^0.9.1",
     "statuses": "^1.4.0",
     "tokenizr": "^1.3.0",
