--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "js-yaml": "^3.11.0",
     "mocha": "^5.0.2",
     "mockgoose": "^7.3.5",
     "nyc": "^11.4.1",
-    "coveralls": "^3.0.0",
+    "rewire": "^3.0.2",
     "supertest": "git+https://github.com/visionmedia/supertest.git"
   }
 }
