--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pug": "^2.0.3",
     "slug": "^0.9.1",
     "statuses": "^1.4.0",
+    "superagent": "^3.8.2",
     "tokenizr": "^1.3.0",
     "yargs": "^11.0.0"
   },
