--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node": ">=8"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "cfonts": "^1.1.3",
     "chalk": "^2.3.2",
@@ -34,9 +35,11 @@
     "formidable": "^1.1.1",
     "fs-extra": "^5.0.0",
     "helmet": "^3.12.0",
-    "mocha-steps": "^1.1.0",
+    "jsonwebtoken": "^8.2.1",
+    "ldapauth-fork": "^4.0.2",
     "moment": "^2.21.0",
     "mongoose": "^5.0.8",
+    "password-sheriff": "^1.1.0",
     "pug": "^2.0.3",
     "slug": "^0.9.1",
     "statuses": "^1.4.0",
@@ -46,9 +49,11 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "chance": "^1.0.13",
     "coveralls": "^3.0.0",
     "js-yaml": "^3.11.0",
     "mocha": "^5.0.2",
+    "mocha-steps": "^1.1.0",
     "mockgoose": "^7.3.5",
     "nyc": "^11.4.1",
     "rewire": "^3.0.2",
