--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chalk": "^2.3.2",
     "compression": "^1.7.2",
     "cross-env": "^5.1.3",
+    "easy-rbac": "^3.1.0",
     "es6-error": "^4.1.1",
     "express": "^4.16.2",
     "express-async-errors": "^2.1.2",
