--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cfonts": "^1.1.3",
     "chalk": "^2.3.2",
     "compression": "^1.7.2",
+    "cookie-parser": "^1.4.3",
     "cross-env": "^5.1.3",
     "easy-rbac": "^3.1.0",
     "es6-error": "^4.1.1",
@@ -37,6 +38,7 @@
     "fs-extra": "^5.0.0",
     "helmet": "^3.12.0",
     "jsonwebtoken": "^8.2.1",
+    "jstransformer-uglify-js": "^1.2.0",
     "ldapauth-fork": "^4.0.2",
     "moment": "^2.21.0",
     "mongoose": "^5.0.8",
