--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "coverage": "cross-env NODE_ENV=development LOG_LEVEL=0 nyc --reporter=lcov --reporter=text --clean node node_modules/mocha/bin/_mocha -u bdd --recursive --timeout 60000 --colors test/",
     "test": "cross-env NODE_ENV=development LOG_LEVEL=0 eslint bin lib test && mocha -u bdd --recursive --timeout 60000 --colors test/",
-    "lint": "eslint bin lib test"
+    "lint": "eslint --fix bin lib test"
   },
   "license": "MIT",
   "engines": {
@@ -34,6 +34,7 @@
     "es6-error": "^4.1.1",
     "express": "^4.16.3",
     "express-async-errors": "^2.1.2",
+    "express-node-metrics": "^1.4.2",
     "filesize": "^3.6.1",
     "formidable": "^1.2.1",
     "fs-extra": "^5.0.0",
