--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.16.3",
     "express-async-errors": "^2.1.2",
     "express-node-metrics": "^1.4.2",
+    "express-rate-limit": "^2.11.0",
     "filesize": "^3.6.1",
     "formidable": "^1.2.1",
     "fs-extra": "^5.0.0",
